[package]
name = "vallis"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-scanner = "0.30.0"
wayland-client = "0.30.0"
wayland-commons = "0.29.5"
wayland-backend = "0.1.0"
